[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/enemies/skull/skull.png" type="Texture" id=1]
[ext_resource path="res://src/enemies/nodes/range_enemy/range_enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/enemies/skull/skull.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=4]
radius = 21.0
height = 26.0

[sub_resource type="CapsuleShape2D" id=5]
radius = 21.0
height = 14.0

[sub_resource type="CircleShape2D" id=8]
radius = 419.043

[sub_resource type="CircleShape2D" id=6]
radius = 24.0

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("SpritePivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "attack"
loop = true
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpritePivot/Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=2]
resource_name = "fly"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpritePivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=3]
resource_name = "take_damage"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("SpritePivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "end_take_damage"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "fly" ],
"method": "play"
} ]
}

[node name="Skull" instance=ExtResource( 2 )]
script = ExtResource( 3 )

[node name="hurtBox" parent="." index="0"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtBox" index="0"]
rotation = 1.5708
shape = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitBox" index="0"]
rotation = 1.5708
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="SpritePivot" index="0"]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
hframes = 4
vframes = 4

[node name="PlayerDetectionZone" parent="." index="3"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 8 )

[node name="Muzzle" parent="." index="4"]
position = Vector2( 0, 31 )

[node name="AttackPivot" type="Position2D" parent="Muzzle" index="0"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="5"]
visible = false
shape = SubResource( 6 )

[node name="Animation" type="AnimationPlayer" parent="." index="6"]
anims/RESET = SubResource( 1 )
anims/attack = SubResource( 7 )
anims/fly = SubResource( 2 )
anims/take_damage = SubResource( 3 )

[connection signal="area_entered" from="hurtBox" to="." method="_on_take_damage"]
[connection signal="body_entered" from="PlayerDetectionZone" to="." method="_on_can_player_attack"]
[connection signal="body_exited" from="PlayerDetectionZone" to="." method="_on_state_chase"]
